<resources>
    <string name="app_name">Epifi Exercise</string>
    <string name="header_title">S.</string>
    <string name="header_desc">First of the few steps to set you up with a Bank Account</string>
    <string name="pan_hint">Enter your PAN number</string>
    <string name="pan_label">PAN NUMBER</string>
    <string name="birthdate_label">BIRTHDATE</string>
    <string name="date_hint">DD</string>
    <string name="month_hint">MM</string>
    <string name="year_hint">YYYY</string>
    <string name="learn_more_text"><![CDATA[Providing PAN & Date of Birth helps us find and fetch your KYC from a central registry by the Government of India. Learn More]]></string>
    <string name="learn_more">Learn More</string>
    <string name="next_button_text">NEXT</string>
    <string name="pan_unavailable_text">I don\'t have a PAN</string>
    <string name="date_error">Date is invalid</string>
    <string name="details_submitted_successfully">Details Submitted Successfully</string>
    <string name="pan_invalid">PAN number is invalid</string>
</resources>
