<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="32dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="32dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <TextView
        android:id="@+id/tv_title"
        style="@style/HeaderTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header_title"
        app:layout_constraintBottom_toTopOf="@id/tv_desc"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_desc"
        style="@style/DescriptionTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/header_desc"
        app:layout_constraintBottom_toTopOf="@id/guideline_header"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <TextView
        android:id="@+id/pan_tv"
        style="@style/LabelTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pan_label"
        app:layout_constraintBottom_toTopOf="@id/pan_til"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/guideline_header"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pan_til"
        style="@style/HintDisabledTextInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toTopOf="@id/birthdate_tv"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/pan_tv">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/PoppinsEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/pan_hint"
            android:inputType="textCapCharacters"
            android:textAllCaps="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/birthdate_tv"
        style="@style/LabelTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/birthdate_label"
        app:layout_constraintBottom_toTopOf="@id/date_til"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/pan_til" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/date_til"
        style="@style/HintDisabledTextInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toTopOf="@id/guideline_footer"
        app:layout_constraintEnd_toStartOf="@id/month_til"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/birthdate_tv">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/PoppinsEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/date_hint"
            android:imeOptions="actionNext"
            android:inputType="date"
            android:maxLength="2"
            android:maxLines="1"
            android:textAlignment="center" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/month_til"
        style="@style/HintDisabledTextInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintBottom_toBottomOf="@id/date_til"
        app:layout_constraintEnd_toStartOf="@id/year_til"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toEndOf="@id/date_til"
        app:layout_constraintTop_toTopOf="@id/date_til">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/PoppinsEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/month_hint"
            android:imeOptions="actionNext"
            android:inputType="date"
            android:maxLength="2"
            android:maxLines="1"
            android:textAlignment="center" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/year_til"
        style="@style/HintDisabledTextInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/date_til"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintStart_toEndOf="@id/month_til"
        app:layout_constraintTop_toTopOf="@id/date_til">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/PoppinsEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/year_hint"
            android:imeOptions="actionDone"
            android:inputType="date"
            android:maxLength="4"
            android:maxLines="1"
            android:textAlignment="center" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/learn_more_tv"
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/learn_more_text"
        app:fontFamily="@font/poppins_regular"
        app:layout_constraintBottom_toTopOf="@id/next_btn"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/guideline_footer"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/next_btn"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_medium"
        android:includeFontPadding="false"
        android:text="@string/next_button_text"
        app:layout_constraintBottom_toTopOf="@+id/pan_unavailable_tv"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/learn_more_tv" />

    <TextView
        android:id="@+id/pan_unavailable_tv"
        style="@style/ClickableTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/pan_unavailable_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/next_btn" />
</androidx.constraintlayout.widget.ConstraintLayout>
